--- a/app/src/main/res/layout/weatherdiary_getforecast_fragment.xml
+++ b/app/src/main/res/layout/weatherdiary_getforecast_fragment.xml
@@ -3,9 +3,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:text="THIS SHOULD CONTAIN THE FORECAST :)"
-        android:paddingTop="40px"
+
+    <fragment
+        android:id="@+id/weatherdiary_getforecast_map_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.SupportMapFragment" />
+
 </LinearLayout>
