--- a/app/src/main/res/layout/weatherdiary_newforecast_activity.xml
+++ b/app/src/main/res/layout/weatherdiary_newforecast_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
         android:src="@drawable/weatherdiary_sample_weather_icon"
@@ -9,71 +8,65 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/weatherdiary_home_updateforecast_button"
-        android:text="Get Weather Forecast"
-        android:textSize="16sp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/weatherdiary_home_placename_textview"
-        android:text="Manila, PH"
-        android:textSize="24sp"
+        android:id="@+id/weatherdiary_newforecast_placename_textview"
+        android:text="Pasig, PH"
+        android:textSize="32sp"
         android:textStyle="bold"
-        android:layout_marginTop="10dp"
         android:layout_gravity="center"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <LinearLayout
+        android:paddingTop="20dp"
         android:orientation="horizontal"
         android:weightSum="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:orientation="vertical"
             android:layout_weight="0.4"
+            android:orientation="vertical"
             android:weightSum="1"
             android:layout_marginLeft="20dp"
-            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:id="@+id/weatherdiary_home_celsius_textview"
+                android:id="@+id/weatherdiary_newforecast_celsius_textview"
                 android:layout_weight="0.5"
-                android:text="N/A"
+                android:text="30C"
                 android:textSize="50sp"
                 android:textStyle="bold"
+                android:layout_marginBottom="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:id="@+id/weatherdiary_home_fahrenheit_textview"
+                android:id="@+id/weatherdiary_newforecast_fahrenheit_textview"
                 android:layout_weight="0.5"
-                android:text="N/A"
+                android:text="80F"
                 android:textSize="50sp"
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
-            android:orientation="vertical"
             android:layout_weight="0.6"
+            android:orientation="vertical"
             android:weightSum="1"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:layout_weight="0.2"
-                android:text="Cloudiness"
+                android:text="cloudiness"
                 android:textSize="14sp"
                 android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:id="@+id/weatherdiary_home_cloudiness_textview"
-                android:layout_weight="0.3"
+                android:id="@+id/weatherdiary_newforecast_cloudiness_textview"
+                android:layout_weight="0.5"
+                android:text="Cloudy"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"
@@ -81,15 +74,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:layout_weight="0.2"
-                android:text="Wind"
+                android:text="wind speed"
                 android:textSize="14sp"
                 android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:id="@+id/weatherdiary_home_wind_textview"
-                android:layout_weight="0.3"
+                android:id="@+id/weatherdiary_newforecast_wind_textview"
+                android:layout_weight="0.5"
+                android:text="6.5 m/s"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"
@@ -98,4 +92,5 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
