Added update functionality on marker click

--- a/app/src/main/res/layout/weatherdiary_forecastdiary_listview_row.xml
+++ b/app/src/main/res/layout/weatherdiary_forecastdiary_listview_row.xml
@@ -10,8 +10,9 @@
         android:id="@+id/weatherdiary_forecastdiary_listview_place_textview"
         android:layout_weight="0.8"
         android:text="Pasig, PH"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="match_parent"
@@ -20,8 +21,9 @@
         android:id="@+id/weatherdiary_forecastdiary_listview_forecasttime_textview"
         android:layout_weight="0.2"
         android:text="Forecast since ..."
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:textStyle="italic"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_width="match_parent"
