--- a/app/src/main/res/layout/weatherdiary_markedplace_forecast_activity.xml
+++ b/app/src/main/res/layout/weatherdiary_markedplace_forecast_activity.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/weatherdiary_markedplace_placename_textview"
         android:text="Pasig, PH"
-        android:textSize="32sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:paddingTop="10dp"
         android:layout_gravity="center"
@@ -17,7 +17,7 @@
     <TextView
         android:id="@+id/weatherdiary_markedplace_forecastTime_textview"
         android:text="Forecast since ..."
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textStyle="italic"
         android:layout_gravity="center"
         android:gravity="center"
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content" />
     <ListView
         android:id="@+id/weatherdiary_markedplace_listview"
+        android:paddingTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></ListView>
 </LinearLayout>
