--- a/app/src/main/res/layout/weatherdiary_markedplace_forecast_listview_row.xml
+++ b/app/src/main/res/layout/weatherdiary_markedplace_forecast_listview_row.xml
@@ -43,6 +43,7 @@
         </LinearLayout>
         <LinearLayout
             android:id="@+id/weatherdiary_markedplace_forecast_temp_linearlayout"
+            android:layout_weight="0.1"
             android:orientation="vertical"
             android:weightSum="1"
             android:layout_gravity="center"
