--- a/app/src/main/res/layout/weatherdiary_home_fragment.xml
+++ b/app/src/main/res/layout/weatherdiary_home_fragment.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:src="@drawable/weatherdiary_sample_weather_icon"
-        android:layout_marginTop="28dp"
+        android:id="@+id/weatherdiary_home_weather_icon"
+        android:src="@drawable/weather_icon"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
