Made minor changes
- Added icons on daily forecast depending on the code returned by the
API
- Fixed minor bugs

--- a/app/src/main/res/layout/weatherdiary_home_fragment.xml
+++ b/app/src/main/res/layout/weatherdiary_home_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/weatherdiary_home_weather_icon"
-        android:src="@drawable/weather_icon"
+        android:src="@drawable/weather_icon_l"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         android:layout_gravity="center"
