--- a/app/src/main/res/layout/weatherdiary_fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/weatherdiary_fragment_navigation_drawer.xml
@@ -43,6 +43,7 @@
         android:layout_height="match_parent"
         tools:context=".NavigationDrawerFragment"/>
     <LinearLayout
+        android:id="@+id/weatherdiary_navigation_drawer_easter_layout"
         android:layout_weight="1.0"
         android:weightSum="1.0"
         android:orientation="horizontal"
