--- a/app/src/main/res/layout/weatherdiary_easter_activity.xml
+++ b/app/src/main/res/layout/weatherdiary_easter_activity.xml
@@ -8,38 +8,52 @@
     android:paddingRight="20dp"
     android:paddingLeft="20dp">
     <TextView
+        android:id="@+id/weatherdiary_easter_title"
+        android:text="Acknowledgment"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
         android:id="@+id/weatherdiary_easter_textview1"
+        android:layout_below="@+id/weatherdiary_easter_title"
         android:text="@string/weatherdiary_easter_prologue"
         android:layout_marginBottom="16dp"
-        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/weatherdiary_easter_textview2"
         android:layout_below="@+id/weatherdiary_easter_textview1"
         android:text="@string/weatherdiary_easter_acknowledgment_one"
         android:layout_marginBottom="16dp"
-        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/weatherdiary_easter_textview3"
         android:layout_below="@+id/weatherdiary_easter_textview2"
         android:text="@string/weatherdiary_easter_acknowledgment_two"
         android:layout_marginBottom="16dp"
-        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/weatherdiary_easter_textview4"
         android:layout_below="@+id/weatherdiary_easter_textview3"
         android:text="@string/weatherdiary_easter_acknowledgment_three"
         android:layout_marginBottom="16dp"
-        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/weatherdiary_easter_textview5"
         android:layout_below="@+id/weatherdiary_easter_textview4"
         android:text="@string/weatherdiary_easter_finale"
         android:layout_marginBottom="16dp"
-        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <Button
         android:id="@+id/weatherdiary_easter_back_button"
